package com.example.notionclone.domain.notification.entity;

public enum NotificationStatus {
    UNREAD, READ, ACCEPTED, REJECTED
} 